--- a/style.css
+++ b/style.css
@@ -108,28 +108,40 @@ div.range-slider input[type=range]::-moz-focus-outer {
 .texty {
 	color:white !important;
 	text-shadow:3px 3px 10px #ccc, 3px 3px 10px #000, -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+	font-family: Verdana !important;
+	font-weight: 500;
 }
 #logoText {
-	padding: 4px 0;
+	padding: 6px 5px;
 	border: 0px;
-	line-height: 15px;
-	height: 3px;
-	font-size: 15px !important;
-	font-family: Aclonica !important;
+	line-height: 12px;
+	height: 4px;
+	font-size: 11px !important;
+	font-weight: 500;
+	font-family: Verdana !important;
+	letter-spacing: 1px;
 }
 .logoImg {
 	filter: invert(100%);
 }
 #menuTop li{
-	font-family: Aclonica !important;
+	font-family: Verdana !important;
+	line-height:8px;
+	font-size: 11px;
+	letter-spacing: 2px;
 	transition: transform .2s;
 }
 .title, .description{
-	font-family: Aclonica !important;
+	font-family: Verdana !important;
+}
+.title {
+	font-weight: 525;
+	line-height: 20px;
+	border: 0;
 }
 
 #menuTop li:hover{
-	transform:scale(1.3);
+	transform:scale(1.2);
 }
 .navbar-toggler{
 	filter:invert(100%);
@@ -154,7 +166,9 @@ div.range-slider input[type=range]::-moz-focus-outer {
 		visibility: hidden;
 	}
 }
-
+.middot{
+	border:0;
+}
 .score {
 	display: inline-flex;
 	flex-wrap: wrap;
@@ -170,7 +184,6 @@ div.range-slider input[type=range]::-moz-focus-outer {
 .sortingNav {
   overflow: hidden;
   background-color: #333;
-  font-family: Arial;
 }
 
 /* Links inside the navbar */
@@ -188,11 +201,21 @@ div.range-slider input[type=range]::-moz-focus-outer {
   border-radius: 5px;
   float: left;
   overflow: hidden;
+  padding-right: 20px;
+  padding-left: 20px;
 }
-
+#priceTag {
+  letter-spacing: 2px;
+  font-size: 9px;
+  font-weight: 900; 
+  font-family: Verdana !important;
+}
 /* Dropdown button */
 .dropdown .dropbtn {
-  font-size: 16px; 
+  letter-spacing: 2px;
+  font-size: 9px;
+  font-weight: bold; 
+  font-family: Verdana !important;
   border: none;
   outline: none;
   color: black;
@@ -200,11 +223,13 @@ div.range-slider input[type=range]::-moz-focus-outer {
   background-color: inherit;
   font-family: inherit; /* Important for vertical align on mobile phones */
   margin: 0; /* Important for vertical align on mobile phones */
+
 }
 
 /* Add a red background color to navbar links on hover */
 .sortingNav a:hover, .dropdown:hover .dropbtn {
   background-color: #c2c3c4;
+  border-radius:5px;
 }
 .sortingNav a, .dropdown .dropbtn {
   background-color: none;
@@ -247,6 +272,9 @@ div.range-slider input[type=range]::-moz-focus-outer {
 	transition: transform .3s;
 	border-width: 0px;
 	border-radius: 10px;
+	min-width: 170px;
+	max-width: 200px;
+	margin: 0 auto;
 }
 .card:hover {
 	transform: scale(1.1);
@@ -257,23 +285,53 @@ div.range-slider input[type=range]::-moz-focus-outer {
 	font-size: 12px;
 	color:gray;
 }
+.card-body {
+	height: 150px;
+	position:relative;
+}
 .card-img-top{
 	border-radius:10px 10px 0 0;
+	height:126px;
 }
 .card-body .price{
 	font-size:16px;
 	color:orange;
 }
+.price {
+	position:absolute;
+	bottom: 5%;
+	left:5%;
+	right:5%;
+}
+.foodCategory {
+	position:absolute;
+	font-family:Georgia, serif;
+	bottom: 20%;
+	left:10%;
+	right: 10%;
+}
 .card-text {
 	margin-bottom: 5px;
 }
 div.col-md-3 {
-	padding: 5px;
+	padding: 2px;
+	max-width: 200px;
 }
 .foodContents {
-	margin-right: 10%;
-	margin-left: 10%;
+	margin: 0 auto;
+}
+div.row {
+	width: fit-content;
+	margin: 0 auto;
+	align-content: center;
+  display: flex;   
+  flex-wrap: wrap;
 }
 button.navbar-toggler{
 	background-color: rgba(255,255,255,0.4);
+}
+#sliderValue1, #sliderValue2{
+  font-size: 10px;
+  color:gray;
+
 }
